<resources>
    <string name="app_name">Attune</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="upload">Results</string>
    <string name="upload_fragment_text">Results Screen</string>

    <!-- Registration Strings -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="ranking_header">Ranking Header</string>

    <string-array name="mood_options">
        <item>Anxious</item>
        <item>Apprehensive</item>
        <item>Cheerful</item>
        <item>Depressed</item>
        <item>Elevated</item>
        <item>Euphoric</item>
        <item>Fearful</item>
        <item>Optimistic</item>
        <item>Neutral</item>
        <item>Panic</item>
        <item>Pessimistic</item>
        <item>Tearful</item>
        <item>Tense</item>
        <item>Worried</item>
    </string-array>
    <string-array name="genre_options">
        <item>None</item>
        <item>Pop</item>
        <item>Hip-Hop</item>
        <item>Rock</item>
        <item>Classical</item>
        <item>Jazz</item>
        <item>Electronic</item>
    </string-array>

    <string-array name="lyrics_options">
        <item>With Lyrics</item>
        <item>Instrumental</item>
        <item>No Preference</item>
    </string-array>
</resources>