<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".register">

    <EditText
        android:id="@+id/edtFirstNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="47dp" />

    <EditText
        android:id="@+id/edtLastNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="101dp" />

    <EditText
        android:id="@+id/edtEmailAddressReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="156dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="269dp" />

    <EditText
        android:id="@+id/edtConfirmPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegisterLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regester"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="334dp"
        tools:ignore="MissingConstraints" />
</LinearLayout>